--- a/css/style.scss
+++ b/css/style.scss
@@ -8,10 +8,10 @@
 
 //컬러시스템
 $pri-color-1 : #2C3E50;
-$pri-color-2 : #52B3D9;
+$pri-color-2 : #9578d2;
 $pri-color-3 : #ffffff;
 
-$sec-color-1 : #68C3A3;
+$sec-color-1 : #e6aad9;
 $sec-color-2 : #333333;
 $sec-color-3 : #eeeeee;
 
@@ -92,7 +92,7 @@ $mobile : "screen and (max-width:640px)";
     height: 100%;
 
     background-color: #222;
-    opacity: 0.6;
+    opacity: 0.7;
     //background-color: rgba(22,22,22,0.6);
 
     content: '';
