--- a/css/style.scss
+++ b/css/style.scss
@@ -15,8 +15,8 @@ $sec-color-1 : #e6aad9;
 $sec-color-2 : #333333;
 $sec-color-3 : #eeeeee;
 
-$point-color-1 : #ffc90e;
-$point-color-2 : #fcf8e3;
+$point-color-1 : #c2bbe5;
+$point-color-2 : #fbe7f9;
 
 
 //변수선언
@@ -115,6 +115,7 @@ $mobile : "screen and (max-width:640px)";
       color: $pri-color-2;
       font-size: $solgan;
       line-height: 80px;
+      letter-spacing: 5px;
 
     
       @media #{$mobile}{
